--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,4 @@ dm-tree
 Pillow
 transformers
 kornia
-minedojo @ git+https://github.com/MineDojo/MineDojo
+# minedojo @ git+https://github.com/MineDojo/MineDojo
